--- a/en/index.html
+++ b/en/index.html
@@ -366,7 +366,7 @@
     <picture data-lazyload class=''   >
         <source data-srcset='https://images.unsplash.com/photo-1579296440601-efe78a19fa91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80' type='image/jpeg' media='(min-width: 1025px)'>
         <source data-srcset='https://images.unsplash.com/photo-1579296440601-efe78a19fa91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80' type='image/jpeg' media='(max-width: 1024px)'>
-        <img width='1079' height='1500' class='' src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAzIDInPjwvc3ZnPg==' alt='Co-living Coliving Design Architecture Sustainability' >
+        <img width='1079' height='1500' class='' src='data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAzIDInPjwvc3ZnPg==' alt='' >
       </picture>    <figcaption>
       <span class="caption"><br /></span>
           </figcaption>
@@ -496,7 +496,7 @@
     <picture class='' >
         <source srcset='' type='image/jpeg' media='(min-width: 1025px)'>
         <source srcset='' type='image/jpeg' media='(max-width: 1024px)'>
-        <img width='0' height='0' class='floating-img' src='' alt='Co-living Coliving Design Architecture Sustainability' data-scroll data-scroll-speed="1">
+        <img width='0' height='0' class='floating-img' src='' alt='' data-scroll data-scroll-speed="1">
       </picture>
     <div class="title-container">
       <div class="inner">
@@ -535,7 +535,7 @@
     <picture class='' >
         <source srcset='' type='image/jpeg' media='(min-width: 1025px)'>
         <source srcset='' type='image/jpeg' media='(max-width: 1024px)'>
-        <img width='0' height='0' class='floating-img' src='' alt='Co-living Coliving Design Architecture Sustainability' data-scroll data-scroll-speed="1">
+        <img width='0' height='0' class='floating-img' src='' alt='' data-scroll data-scroll-speed="1">
       </picture>
     <div class="title-container">
       <div class="inner">
@@ -575,7 +575,7 @@
 <picture class='' >
     <source srcset='' type='image/jpeg' media='(min-width: 1025px)'>
     <source srcset='' type='image/jpeg' media='(max-width: 1024px)'>
-    <img width='0' height='0' class='floating-img' src='' alt='Co-living Coliving Design Architecture Sustainability' data-scroll data-scroll-speed="1">
+    <img width='0' height='0' class='floating-img' src='' alt='' data-scroll data-scroll-speed="1">
   </picture>
 <div class="title-container">
   <div class="inner">
